# CUDA-Optimization

./: .gitignore  CMakeLists.txt  README.md  script.py  sgemm.txt
lib/: cute.cu  sgemm.cu  sgemv.cu  softmax.cu  wmma.cu
python/triton/: matmul.py
